--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,6 +2,9 @@
   "name": "front-end",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=16.0.0 <17.0.0"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
