--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.datasource.url= jdbc:postgresql://localhost:5432/parking-control-db
+spring.datasource.username=postgres
+spring.datasource.password=989501
+spring.jpa.hibernate.ddl-auto=update
