feat: docker-compose

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/parking-control-db
+spring.datasource.url= jdbc:postgresql://localhost:5432/ppi
 spring.datasource.username=postgres
-spring.datasource.password=989501
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
