--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/dotenv": "^1.4.1",
     "core-js": "^3.25.3",
     "msw": "^0.49.2",
     "nuxt": "^2.15.8",
