--- a/front-end/package.json
+++ b/front-end/package.json
@@ -32,7 +32,8 @@
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "vue-toast-notification": "^0.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
